FIX: Align css to reflect phase 1 of Basic Phase: The Masthead intended design

--- a/stylesheets/components/masthead.css
+++ b/stylesheets/components/masthead.css
@@ -1,1 +1,80 @@
 /* Your code here */
+.masthead {
+    display: grid;
+    grid-template: 2.5fr 1fr 6fr / repeat(3, 1fr);
+    position: relative;
+}
+
+.masthead__menu-and-search {
+    grid-area: 1/1/2/2;
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+}
+.masthead__actions {
+    grid-area: 1/3/2/span 1;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+.masthead__technologies {
+    grid-area: 2/2/span 1/ span 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* gap: 1rem; */
+    border: 1px solid #e2e2e2;
+    border-bottom: none;
+    position: relative;
+    top: 1px;
+    background-color: white;
+}
+.masthead__date {
+    grid-area: 3/1/span 1/ span 1;
+}
+
+.masthead__logo {
+    grid-area: 3/2/span 1/span 1;
+    text-align: center;
+    padding: 1rem 0;
+}
+.masthead__paper {
+    grid-area: 3/3/span 1/ span 1;
+    justify-content: flex-end;
+}
+
+.masthead__button {
+    font-size: 11px;
+    padding: 7px 9px;
+}
+.masthead__button:hover {
+    background-color: #e2e2e2;
+}
+
+/* Perosnal Sh!t */
+.masthead__actions-div {
+    padding: 0.5rem 0;
+}
+
+.masthead__technologies-span {
+    text-transform: uppercase;
+    font-size: 10px;
+    color: #6f6f6f;
+    margin: 0 0.5rem;
+}
+
+/* Masthead */
+.masthead__date,
+.masthead__paper {
+    font-size: 11px;
+    display: flex;
+    align-items: flex-end;
+    padding-bottom: 11px;
+}
+.masthead__date,
+.masthead__logo,
+.masthead__paper {
+    border-bottom: 1px solid #e2e2e2;
+    border-top: 1px solid #e2e2e2;
+}
+
